# agentguard-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  agentguard.yaml.example  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cursor/rules/: agentguard.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  security.yml  test.yml
agentguard/: __init__.py  __main__.py  approvals.py  audit_log.py  cli.py  config.py  gateway.py  identity.py  modes.py  policy_engine.py  proxy.py  self_protect.py  server.py
agentguard/detectors/: __init__.py  normalize.py  pii.py  prompt_injection.py  secrets.py  tool_poisoning.py
agentguard/nist/: __init__.py  ai_rmf.py  cmmc.py  controls_800_53.py  mappings.py  mitre_atlas.py  owasp_llm.py  pqc.py
agentguard/policies/: __init__.py  loader.py
agentguard/policies/defaults/: dev_mode.yaml  federal_mode.yaml
agentguard/reports/: __init__.py  fedramp.py  nist_ai_rmf.py  oscal.py  poam.py
agentguard/reports/templates/: fedramp_evidence.md
docs/: architecture.md  claude-code-setup.md  fedramp-deployment.md  getting-started.md  nist-mapping.md  policies.md  research-brief-2026.md  threat-model.md
examples/: claude_code_integration.md  cursor_integration.md  federal_deployment.md  local_dev_setup.py  openclaw_integration.md
examples/sample_policies/: allow_github_only.yaml  deny_destructive_ops.yaml  pii_scan_strict.yaml
skills/agentguard/: SKILL.md
tests/: conftest.py  test_audit_log.py  test_oscal_report.py  test_policy_engine.py  test_redforge_fixes.py  test_redforge_trial3_fixes.py  test_redforge_trial4_fixes.py  test_self_protect.py  test_signing_requirements.py
tests/e2e/: smoke_test.py
tests/fixtures/: sample_tool_calls.json
tests/pentest/: poc_audit_tamper.py  poc_detector_bypass.py  poc_gateway_no_auth.py  poc_identity_and_mode.py  poc_signature_never_verified.py
tests/test_detectors/: __init__.py  test_pii.py  test_prompt_injection.py
tests/test_nist/: __init__.py  test_controls.py
